--- a/src/app/components/booking/booking.component.html
+++ b/src/app/components/booking/booking.component.html
@@ -9,8 +9,8 @@
         <input type="text" placeholder="Pickup location" />
       </div>
       <div class="small--input">
-        <input type="text" placeholder="Pickup time" />
-        <input type="text" placeholder="Pickup date" />
+        <input type="time" placeholder="Pickup time" />
+        <input type="date" placeholder="Pickup date" />
       </div>
     </div>
     <div class="inputs">
@@ -18,8 +18,8 @@
         <input type="text" placeholder="Drop-off location" />
       </div>
       <div class="small--input">
-        <input type="text" placeholder="Drop-off time" />
-        <input type="text" placeholder="Drop-off date" />
+        <input type="time" placeholder="Drop-off time" />
+        <input type="date" placeholder="Drop-off date" />
       </div>
     </div>
     <button class="booking__btn">Continue</button>
