--- a/src/app/components/carousel-main/carousel-main.component.css
+++ b/src/app/components/carousel-main/carousel-main.component.css
@@ -2,7 +2,7 @@
   position: relative;
   margin: auto;
   text-align: center;
-  width: 70rem;
+  width: auto;
   border-radius: 15px;
   /* position: relative;
   -webkit-flex: 0 0 100%;
