--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -12,9 +12,10 @@
       <div class="footer-col">
         <h4>Explore</h4>
         <ul>
-          <li><a href="#">Book a car</a></li>
-          <li><a href="#">Trust & safety</a></li>
-          <li><a href="#">FAQ</a></li>
+          <li><a href="/">Book a car</a></li>
+          <li><a href="trust-&-safety">Trust & Safety</a></li>
+          <li><a href="trust-&-safety">How it works</a></li>
+          <li><a href="how-drivefinder-works">FAQ</a></li>
         </ul>
       </div>
 
