--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,10 +1,12 @@
 <div class="nav">
-  <img
-    src="../assets/img/logos/logo.png"
-    alt="logo"
-    class="logo"
-    routerLink="/"
-  />
+  <a href="/">
+
+    <img
+      src="../assets/img/logos/logo.png"
+      alt="logo"
+      class="logo"
+    />
+  </a>
 
   <nav class="top__nav">
     <ul>
@@ -12,7 +14,7 @@
         <a href="">About Us</a>
       </li>
       <li class="link" routerLinkActive="nav__active">
-        <a href="">Insurance & protection</a>
+        <a href="trust-&-safety">Trust & Safety</a>
       </li>
       <li
         class="link"
@@ -28,3 +30,6 @@
     <a href="/authentication">Drive Now</a>
   </button>
 </div>
+
+<!-- hide nav items and button when logged in. it can be displayed 
+under the dropdown of the user gmail pic -->
