--- a/src/app/components/brands/brands.component.html
+++ b/src/app/components/brands/brands.component.html
@@ -2,12 +2,17 @@
   <div class="fluid">
     <div class="slider-wrap">
       <div class="slider-main">
-        <div class="item" *ngFor="let brand of brands" [routerLink]="['brand', brand.text]">
+        <a
+          class="item"
+          *ngFor="let brand of brands"
+          [routerLink]="['brand', brand.text]"
+          [href]="'/' + brand.text"
+        >
           <div class="text">{{ brand.text }}</div>
           <div class="imgbox">
             <img [src]="brand.img" [alt]="brand.text" />
           </div>
-        </div>
+        </a>
       </div>
       <div class="sliderbtn__box">
         <button class="sliderbtn prev" appPrev>
