--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,32 +1,31 @@
-<body>
-  <footer class="footer">
-    <div class="container row">
-      <div class="footer-col">
-        <h4>DriveFinder</h4>
-        <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="#">privacy policy</a></li>
-          <li><a href="#">Team </a></li>
-        </ul>
-      </div>
-      <div class="footer-col">
-        <h4>Explore</h4>
-        <ul>
-          <li><a href="/">Book a car</a></li>
-          <li><a href="trust-&-safety">Trust & Safety</a></li>
-          <li><a href="trust-&-safety">How it works</a></li>
-          <li><a href="how-drivefinder-works">FAQ</a></li>
-        </ul>
-      </div>
+<footer class="footer">
+  <div class="container row">
+    <div class="footer-col">
+      <h4>DriveFinder</h4>
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">privacy policy</a></li>
+        <li><a href="#">Team </a></li>
+      </ul>
+    </div>
+    <div class="footer-col">
+      <h4>Explore</h4>
+      <ul>
+        <li><a href="/">Book a car</a></li>
+        <li><a href="rentals/weddings">Weddings</a></li>
+        <li><a href="trust-&-safety">Trust & Safety</a></li>
+        <li><a href="trust-&-safety">How it works</a></li>
+        <li><a href="how-drivefinder-works">FAQ</a></li>
+      </ul>
+    </div>
 
-      <div class="footer-col">
-        <h4>follow us</h4>
-        <div class="social-links">
-          <a href="#"><i class="bx bxl-facebook"></i></a>
-          <a href="#"><i class="bx bxl-twitter"></i></a>
-          <a href="#"><i class="bx bxl-instagram"></i></a>
-        </div>
+    <div class="footer-col">
+      <h4>follow us</h4>
+      <div class="social-links">
+        <a href="#"><i class="bx bxl-facebook"></i></a>
+        <a href="#"><i class="bx bxl-twitter"></i></a>
+        <a href="#"><i class="bx bxl-instagram"></i></a>
       </div>
     </div>
-  </footer>
-</body>
+  </div>
+</footer>
