--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -75,3 +75,23 @@ a {
 .link:active:before {
   right: 0;
 }
+
+.img-box img {
+  height: 1.4rem;
+  background: var(--color-white);
+  padding: 4px;
+  border-radius: 50px;
+  border: 1px solid transparent;
+  cursor: pointer;
+  transition: all 0.6s ease;
+}
+
+.img-box img:hover {
+  border: 1px solid var(--blue);
+}
+
+.sub {
+  z-index: 10;
+  position: absolute;
+  right: 2%;
+}
