--- a/src/app/components/user-main/user-main.component.html
+++ b/src/app/components/user-main/user-main.component.html
@@ -1,1 +1,16 @@
-<p>user-main works!</p>
+<!-- <div class="container" (click)="close()">
+  <div (click)="$event.stopPropagation()">
+    <div class="account">
+      <h3>Account</h3>
+      <p class="manage">Manage your account information</p>
+      <div class="profile">
+        <p class="manage">Profile</p>
+        <hr>
+        <span class="mail__span">
+            <img src="./assets/img/Memojis/Memoji1.png" alt="">
+            <p>Samuel isah</p>
+        </span>
+      </div>
+    </div>
+  </div>
+</div> -->
