--- a/src/app/pages/brand-page/brand-page.component.html
+++ b/src/app/pages/brand-page/brand-page.component.html
@@ -48,5 +48,5 @@
 
 <section>
   <section-heading>Faq</section-heading>
-  <app-faq [items]="brand?.brandFaq"></app-faq>
+  <faq [items]="brand?.brandFaq"></faq>
 </section>
