--- a/src/app/pages/how-it-works/how-it-works.component.html
+++ b/src/app/pages/how-it-works/how-it-works.component.html
@@ -44,7 +44,7 @@
 
 <section>
   <section-heading>Faq</section-heading>
-  <app-faq [items]="faq"></app-faq>
+  <faq [items]="faq$ | async"></faq>
 </section>
 
 <!-- 
