--- a/src/app/pages/trust-safety/trust-safety.component.html
+++ b/src/app/pages/trust-safety/trust-safety.component.html
@@ -12,5 +12,5 @@
 
 <!-- <section>
   <section-heading>Faq</section-heading>
-  <app-faq [items]="faq"></app-faq>
+  <faq [items]="faq"></faq>
 </section> -->
