--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  backdrop-filter: blur(4px);
   border-bottom: 1px solid var(--grey-secondary);
 }
 .logo {
