--- a/src/app/components/user-sub/user-sub.component.html
+++ b/src/app/components/user-sub/user-sub.component.html
@@ -9,7 +9,11 @@
 </div>
 <div class="fl">
     <img class="icon" src="./assets/img/icons/range-setting.svg" alt="">
-    <p>Manage Account</p>
+    <p>Account</p>
+</div>
+<div class="fl">
+    <img class="icon" src="./assets/img/icons/heart-outline.svg" alt="">
+    <p>Favorites</p>
 </div>
 <div class="fl">
     <img class="icon" src="./assets/img/icons/log-out.svg" alt="">
