--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,14 +1,13 @@
 <header-hero> </header-hero>
 
-
-<section *ngIf="filteredCars.length > 0">
+<section>
   <section-heading>Explore Cars by Brands</section-heading>
-  <brands [brands]="filteredCars"></brands>
+  <brands [brands]="filteredCars$ | async"></brands>
 </section>
 
 <section>
   <section-heading>Explore Cars by Category</section-heading>
-  <category [categories]="categorizedCars"></category>
+  <category [categories]="categorizedCars$ | async"></category>
 </section>
 
 <section>
@@ -32,5 +31,5 @@
 
 <section>
   <section-heading>Faq</section-heading>
-  <app-faq></app-faq>
+  <faq [items]="faq$ | async"></faq>
 </section>
